--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -9,11 +9,19 @@
     <include layout="@layout/content_chat" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/nextFab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
+        android:layout_gravity="center_vertical|end"
         android:layout_margin="@dimen/fab_margin"
         android:src="@drawable/next_arrow" />
+
+    <!--android.support.design.widget.FloatingActionButton
+        android:id="@+id/prevFab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|start"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/prev_butt" /-->
 
 </android.support.design.widget.CoordinatorLayout>
