--- a/app/src/main/res/layout/content_chat.xml
+++ b/app/src/main/res/layout/content_chat.xml
@@ -29,103 +29,38 @@
             android:layout_weight="5"
             android:background="@color/mint">
 
-            <!--<LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/activity_horizontal_margin"
-                android:padding="@dimen/activity_horizontal_margin"
-                android:layout_alignParentTop="true">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="right"
-                    android:text="about"
-                    android:id="@+id/aboutTV"
-                    android:textColor="@color/grey"
-                    android:textSize="30sp"/>
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:text="Politics"
-                    android:id="@+id/catNameTV"
-                    android:paddingLeft="@dimen/activity_horizontal_margin"
-                    android:textColor="@color/white"
-                    android:textSize="30sp"/>
-
-            </LinearLayout>-->
-
-            <include layout="@layout/about_lv_item"
+            <include layout="@layout/chat_top_panel"
                 android:id="@+id/topPanel"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/activity_horizontal_margin"
-                android:layout_centerInParent="true"
-                android:textSize="30sp"
+                android:layout_below="@+id/topPanel"
+                android:textSize="20sp"
                 android:text="\nHow many kids do you want to have?\n"
                 android:textColor="@color/navy"
                 android:background="@color/green"
                 android:gravity="center"
                 android:id="@+id/questionTV"
-                android:padding="@dimen/activity_horizontal_margin"/>
+                android:padding="1dp"/>
 
-            <LinearLayout
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/questionTV"
+                android:layout_above="@+id/textField"
+                android:id="@+id/chat_lv"/>
+
+            <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/buttLL"
-                android:layout_alignParentBottom="true">
-
-                <ImageButton
-                    android:layout_width="0dp"
-                    android:layout_height="60dp"
-                    android:layout_weight="1"
-                    android:src="@drawable/prev_butt"
-                    android:background="@null"
-                    android:scaleType="fitCenter"
-                    android:layout_margin="@dimen/activity_horizontal_margin"
-                    android:id="@+id/prevButt"
-                    android:gravity="center"/>
-
-                <!-- <ImageButton
-                    android:layout_width="0dp"
-                    android:layout_height="60dp"
-                    android:layout_weight="1"
-                    android:src="@drawable/fav_butt"
-                    android:background="@null"
-                    android:scaleType="fitCenter"
-                    android:layout_margin="@dimen/activity_horizontal_margin"
-                    android:id="@+id/favButt"
-                    android:gravity="center"/>-->
-
-                <ImageButton
-                    android:layout_width="0dp"
-                    android:layout_height="60dp"
-                    android:layout_weight="1"
-                    android:src="@drawable/next_butt"
-                    android:background="@null"
-                    android:scaleType="fitCenter"
-                    android:layout_margin="@dimen/activity_horizontal_margin"
-                    android:id="@+id/nextButt"
-                    android:gravity="center"/>
-            </LinearLayout>
-
-            <!-- <com.google.android.gms.ads.AdView
-                xmlns:ads="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/adView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:layout_centerHorizontal="true"
                 android:layout_alignParentBottom="true"
-                ads:adSize="BANNER"
-                ads:adUnitId="@string/banner_admob_id">
-            </com.google.android.gms.ads.AdView> -->
+                android:id="@+id/textField"
+                android:text="@string/app_name"
+                android:background="@color/white"
+                android:textColor="@color/grey"
+                android:padding="@dimen/activity_horizontal_margin"/>
 
         </RelativeLayout>
     </LinearLayout>
