--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="grey">#4f717a</color>
     <color name="white">#ffffff</color>
     <color name="green">#80318a1b</color>
+    <color name="online">#CC04B868</color>
 </resources>
