--- a/app/src/main/res/layout/background.xml
+++ b/app/src/main/res/layout/background.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.ads2dios.adrieladtan.letstalk.MainActivity">
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
@@ -19,12 +16,10 @@
         android:text="@string/app_name"
         android:fontFamily="@font/lato_bold"/>
 
-    <ListView
+    <View
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="5"
-        android:background="@color/mint"
-        android:padding="10dp"
-        android:id="@+id/aboutLV"/>
+        android:background="@color/mint"/>
 
 </LinearLayout>
