--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,27 +4,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.ads2dios.adrieladtan.letstalk.MainActivity">
+    tools:context="com.ads2dios.adrieladtan.letstalk.MainActivity"
+    android:orientation="vertical">
+
+    <include layout="@layout/title"
+        android:id="@+id/title"/>
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:textSize="50sp"
+        android:layout_height="50dp"
         android:gravity="center"
-        android:textStyle="bold"
-        android:textColor="@color/grey"
-        android:id="@+id/titleTV"
-        android:text="@string/app_name"
-        android:fontFamily="@font/lato_bold"/>
+        android:text="Online"
+        android:textColor="@color/white"
+        android:fontFamily="@font/lato_regular"
+        android:id="@+id/onlineTV"
+        android:background="@color/online"/>
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="5"
-        android:background="@color/mint"
+        android:layout_height="match_parent"
+        android:layout_below="@id/onlineTV"
         android:padding="10dp"
+        android:background="@color/mint"
         android:id="@+id/aboutLV"/>
 
 </LinearLayout>
