--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,54 +7,49 @@
     android:orientation="vertical"
     tools:context=".MenuActivity">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:textSize="50sp"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:textColor="@color/grey"
-        android:id="@+id/titleTV"
-        android:text="@string/app_name"
-        android:fontFamily="@font/lato_bold"/>
+    <include layout="@layout/title"
+        android:id="@+id/title"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight=".75"
+        android:layout_height="50dp"
         android:orientation="horizontal"
         android:id="@+id/userLL"
         android:padding="10dp"
-        android:background="@color/online">
+        android:background="@color/online"
+        android:layout_below="@id/title">
 
-        <ImageView
+        <!--ImageView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:src="@drawable/default_profile"
             android:layout_margin="10dp"
             android:layout_weight="1"
             android:visibility="invisible"
-            android:id="@+id/profile"/>
+            android:id="@+id/profile"/-->
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
             android:layout_gravity="center"
-            android:gravity="center_vertical"
+            android:gravity="center"
             android:text="username"
             android:layout_weight="5"
             android:textColor="@color/white"
             android:fontFamily="@font/lato_regular"
             android:id="@+id/usernameTV"/>
 
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/spinner"/>
+
     </LinearLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="4.25"
+        android:layout_height="match_parent"
+        android:layout_below="@id/userLL"
         android:background="@color/mint">
 
         <LinearLayout
@@ -123,4 +118,4 @@
 
     </RelativeLayout>
 
-</LinearLayout>
+</RelativeLayout>
