--- a/app/src/main/res/layout/chat_lv_item.xml
+++ b/app/src/main/res/layout/chat_lv_item.xml
@@ -8,24 +8,28 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
-        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="50dp"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:padding="@dimen/activity_horizontal_margin"
-        android:background="@color/grey"
+        android:background="@drawable/rounded_receive"
         android:textColor="@color/white"
         android:textSize="15sp"
-        android:gravity="start"
-        android:id="@+id/other_chat_bubble"/>
+        android:fontFamily="@font/lato_regular"
+        android:id="@+id/receive_chat_bubble"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
-        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_marginLeft="50dp"
         android:padding="@dimen/activity_horizontal_margin"
-        android:background="@color/white"
+        android:background="@drawable/rounded_send"
         android:textColor="@color/grey"
         android:textSize="15sp"
+        android:fontFamily="@font/lato_regular"
         android:layout_alignParentEnd="true"
-        android:id="@+id/my_chat_bubble"/>
+        android:id="@+id/send_chat_bubble"
+        />
 
 </RelativeLayout>
